Udrożnienie testów, zmiana portu i drobne poprawki